kubernetes/apps/kyverno/tests/cli/workload-hygiene/values.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Values
metadata:
  name: values
policies:
  - name: require-pod-probes-audit
    resources:
      - name: missing-probes
        values:
          request.operation: CREATE
      - name: has-readiness-probe
        values:
          request.operation: CREATE
